--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  
+  
   "scripts": {
-    "start": "node -r esm server.js",
-    "dev": "nodemon -r esm server.js",
-    "test": "jest --runInBand"
-  },
+  "start": "node -r esm server.js",
+  "dev": "nodemon -r esm server.js",
+  "test": "set NODE_ENV=test&& jest --runInBand",
+  "test:atdd": "set NODE_ENV=test&& jest --runInBand tests/atdd"
+},
+
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -30,6 +35,7 @@
     "@babel/preset-env": "^7.28.5",
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
+    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.3"
   }
 }
